# bzd-users

./: .gitignore  Cargo.toml  README.md
lib/api/: Cargo.toml  build.rs
lib/api/src/: auth.proto  contacts.proto  lib.rs  sources.proto  users.proto
lib/migration/: Cargo.toml
lib/migration/src/: entities.rs  lib.rs  m20250830_132156_create_users.rs  m20250831_070628_create_verifications.rs  m20250911_163757_create_contacts.rs  m20250929_152751_create_sources.rs  m20251005_182748_add_contacts_indexes.rs  main.rs
settings/: default.toml
src/: app.rs  main.rs
src/app/: auth.rs  contacts.rs  crypto.rs  db.rs  error.rs  settings.rs  sources.rs  state.rs  users.rs
src/app/auth/: encoder.rs  error.rs  grpc.rs  repo.rs  service.rs  settings.rs  state.rs  verification.rs
src/app/auth/repo/: user.rs  verification.rs
src/app/contacts/: grpc.rs  repo.rs  service.rs  state.rs
src/app/contacts/repo/: contact.rs
src/app/crypto/: encryptor.rs  service.rs  settings.rs  state.rs
src/app/sources/: grpc.rs  repo.rs  service.rs
src/app/sources/repo/: contact.rs  source.rs  user.rs
src/app/users/: grpc.rs  repo.rs  service.rs  state.rs
src/app/users/repo/: contact.rs  user.rs
