[package]
name = "bzd-users"
edition = "2024"

[workspace]
resolver = "3"
members = ["lib/api", "lib/migration"]

[dependencies]
bzd-users-api = { path = "lib/api" }
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }

axum = "0.8.7"

tokio = { version = "1.48.0", features = ["full"] }

tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-reflection = "0.14.2"

serde = "1.0.228"
serde_json = "1.0.145"

sea-orm = { version = "1.1.19", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
] }

reqwest = { version = "0.12.24", default-features = false, features = [
  "json",
  "rustls-tls",
] }

config = { version = "0.15.19", default-features = false, features = ["toml"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
rand = "0.9.2"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
chrono = "0.4.42"
aes-gcm = "0.10.3"
random_color = "1.1.0"
