[package]
name = "bzd-users-api"
edition = "2024"

[dependencies]
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"

strum = "0.28.0"
strum_macros = "0.28.0"

[build-dependencies]
bzd-lib = { git = "https://github.com/bez-dna/bzd-lib.git" }
tonic-prost-build = "0.14.5"
